ajustes no tempo de carregamento

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
 
+    <audio class="audio_cardReveal" src="./assets/audio/cardReveal.wav">
+    </audio>
+  </body>
   </script>
 </html>
